src/objects/BillingCondition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Margin__c</fullName>
        <label>Default Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Terms__c</fullName>
        <inlineHelpText>Number of days after which discount is being revoked</inlineHelpText>
        <label>Discount Terms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSAs__c</fullName>
        <label>MSAs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_Rate__c</fullName>
        <label>Rebate Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strike_Profit__c</fullName>
        <label>Strike Profit %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Billing Condition</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Rebate_Rate__c</columns>
        <columns>Default_Margin__c</columns>
        <columns>Strike_Profit__c</columns>
        <columns>MSAs__c</columns>
        <columns>Discount_Terms__c</columns>
        <columns>Active__c</columns>
        <columns>Rebate_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rebate_Rate__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Rebate_Type__c</columns>
        <columns>Default_Margin__c</columns>
        <columns>Discount_Terms__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Conditions</pluralLabel>
    <recordTypes>
        <fullName>Normal</fullName>
        <active>true</active>
        <label>Normal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate</fullName>
        <active>true</active>
        <label>Rebate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RebateRateValidation</fullName>
        <active>false</active>
        <description>100% is a maximum value</description>
        <errorConditionFormula>IF(OR(Rebate_Rate__c &lt;= 100 &amp;&amp; RecordType.Name == &apos;Rebate&apos;, RecordType.Name == &apos;Normal&apos;), false, true)</errorConditionFormula>
        <errorDisplayField>Rebate_Rate__c</errorDisplayField>
        <errorMessage>The maximum value is 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RecordTypeValidation</fullName>
        <active>false</active>
        <description>Allow to populate the value only when Record Type is &quot;Rebate&quot;</description>
        <errorConditionFormula>IF(OR(RecordType.DeveloperName = &apos;Rebate&apos;, RecordType.DeveloperName = &apos;Normal&apos; &amp;&amp; ISBLANK(Rebate_Rate__c )), false, true)</errorConditionFormula>
        <errorDisplayField>Rebate_Rate__c</errorDisplayField>
        <errorMessage>The value is allowed only for Rebate Billing Conditions</errorMessage>
    </validationRules>
</CustomObject>